# nd608-generative-ai-project-1

./: .gitignore  README.md  Solution.ipynb  main.py  pyproject.toml
peft-fake-news/: adapter_config.json  adapter_model.safetensors
