[project]
name = "nd608-generative-ai-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "huggingface-hub>=0.35.3",
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "ruff>=0.13.1",
    "torch>=2.8.0",
    "transformers[torch]>=4.57.0",
    "ty>=0.0.1a21",
]
